<resources>
    <string name="app_name">Desktop Controller</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="connect">Connect</string>
    <string name="mouse">Mouse</string>
    <string name="keyboard">Keyboard</string>
    <string name="presentation">Presentation</string>
    <string name="poweroff">Power Off</string>
    <string name="left">Left</string>
    <string name="right">Right</string>


</resources>
